Bug 328306 Open/Save dialogs no longer work on Win9x/Me/NT4 even if cairo is disabled. patch by Masatoshi Kimura (emk) <VYV03354@nifty.ne.jp> r+sr=roc